[package]
name = "fs-walk"
version = "0.2.2"
edition = "2021"
rust-version = "1.70.0"
authors = ["Quentin JEROME <qjerome@rawsec.lu>"]
description = "File-system walking crate"
keywords = ["file-system", "walking", "recursive", "find"]
license = "GPL-3.0"
documentation = "https://docs.rs/fs-walk"
repository = "https://github.com/qjerome/fs-walk"

[package.metadata.docs.rs]
all-features = true

[features]
regex = ["dep:regex"]

default = []
[dependencies]
blake3 = "1.8.2"
regex = { version = "1.11.1", optional = true }

[dev-dependencies]
tempfile = "3"
